tweak rings, mobile dark mode, fix corner overflow issue

--- a/src/pages/panel/globals.css
+++ b/src/pages/panel/globals.css
@@ -2,7 +2,7 @@
 
 @layer base {
   body {
-    @apply h-screen w-screen overflow-hidden bg-framecol font-sans text-chocolate-deep dark:bg-framecol-dark dark:text-white;
+    @apply h-screen w-screen overflow-hidden bg-framecol font-sans text-chocolate-deep dark:bg-chocolate-alt dark:text-white;
   }
 
   #root {
